RESOLVED FIXED210408
Fix some strange uses of start/endOfDocument
https://bugs.webkit.org/show_bug.cgi?id=210408
Summary Fix some strange uses of start/endOfDocument
Darin Adler
Reported 2020-04-12 10:49:01 PDT
Fix some strange uses of start/endOfDocument
Attachments
Patch (7.23 KB, patch)
2020-04-12 10:52 PDT, Darin Adler
wenson_hsieh: review+
Darin Adler
Comment 1 2020-04-12 10:52:23 PDT
Darin Adler
Comment 2 2020-04-12 12:31:14 PDT
Radar WebKit Bug Importer
Comment 3 2020-04-12 12:32:14 PDT
Note You need to log in before you can comment on or make changes to this bug.