Fix some strange uses of start/endOfDocument https://bugs.webkit.org/show_bug.cgi?id=210408

Reviewed by Wenson Hsieh.

Source/WebCore:

* editing/VisibleSelection.cpp:
(WebCore::VisibleSelection::setStartAndEndFromBaseAndExtentRespectingGranularity):
Call startOfDocument and endOfDocument without unnecessarily turning a Position
into a VisiblePostion, since those functions just require any node from the document.

Source/WebKit:

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::replaceDictatedText): Pass the document to startOfDocument,
rather than getting the documentelement, because the function works on any
node, so there's no reason to write code to get a particular one.
(WebKit::WebPage::applyAutocorrectionInternal): Ditto.

Source/WebKitLegacy/ios:

* WebCoreSupport/WebFrameIOS.mm:
(-[WebFrame moveSelectionToStart]): Call startOfDocument on the document;
there is no need to pass a particular VisiblePosition, since all it gets
from the VisiblePosition is the document.
(-[WebFrame moveSelectionToEnd]): Ditto, for endOfDocument.
(-[WebFrame startPosition]): Call startOfDocument on the document rather
than using code to find the document element, since the function works
on any node.
(-[WebFrame endPosition]): Ditto.

Canonical link: https://commits.webkit.org/223300@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259987 268f45cc-cd09-0410-ab3c-d52691b4dbfc